# KiteOS

./: CMakeLists.txt  README.md
include/: multiboot.h~
include/kernel/: display.h  error.h  gdt.h  idt.h  init.h  irq.h  isr.h  kernel.h  keyboard.h  math.h  multiboot.h  pmm.h  sandbox.h  string.h  system.h
include/kernel/drivers/: atapio.h  pit.h  rtc.h
include/kernel/drivers/disk/: ide.h
include/kernel/drivers/fs/: ext2.h
include/kernel/drivers/input/: kb.h
include/kernel/drivers/timing/: pit.h  rtc.h
include/kernel/drivers/video/: vga.h
include/kernel/init/: gdt.h  idt.h  init.h  irq.h  isr.h
include/kernel/mem/: kalloc.h  register.h
include/kernel/sys/: io.h
include/kernel/utils/: terminal.h
include/libc/: stdint.h  string.h
src/: pmm.c~
src/kernel/: kernel.c  link.ld
src/kernel/boot/: boot.asm
src/kernel/drivers/disk/: ide.c
src/kernel/drivers/fs/: ext2.c
src/kernel/drivers/input/: kb.c
src/kernel/drivers/timing/: pit.c  rtc.c
src/kernel/drivers/video/: vga.c
src/kernel/init/: gdt.c  idt.c  init.c  irq.c  isr.c  pmode.asm
src/kernel/mem/: kalloc.c
src/kernel/sys/: io.c
src/kernel/utils/: terminal.c
src/libc/: string.c
